fix some mixin and 200 errors